# BRICKbuilder

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
data/IFC/: boptest_multizone.ifc
data/TTL/: boptest_multizone.ttl
data/boptest_multizone/: boptest_multizone.ttl  shacl_shapes.ttl
data/templates/: radiator.ttl  room_with_radiator.ttl  valve.ttl
joss/: paper.md
src/: __init__.py  config.py  ifc.py  logging.py  model.py  typing.py
src/app/: __init__.py  dialogs.py  items.py  shacl_dialogs.py  widgets.py  windows.py
src/ontologies/: graphs.py  reasoning.py
src/ontologies/files/: S223.ttl
src/ontologies/namespaces/: __init__.py  qudt.py
src/validation/: __init__.py  shacl.py
