[project]
name = "BRICKbuilder"
version = "0.1.0"
description = "A visual interface to create and manipulate BRICK graphs."
readme = "README.md"
authors = [
    { name = "Max Berktold", email = "max.berktold@eonerc.rwth-aachen.de" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "rdflib",
    "PyQt5",
    "ifcopenshell"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
